--- a/third-stage/views/index.ejs
+++ b/third-stage/views/index.ejs
@@ -108,7 +108,8 @@
         </div>
         <div class="clear" style="margin:0.2rem 0">
             <p class="opennew-goodsname"><span><%= data[i].goodsname%></span></p>
-            <p class="opennew-times">还剩<span>dsd</span>:<span>ddd</span>:<span>dd</span></p>
+            <!-- <p class="opennew-times">还剩<span id="timer"></span></p> -->
+            <p class="opennew-times">还剩<span class="showInterval">12</span>:<span class="showInterval">34</span>:<span class="showInterval">56</span></p>
         </div>
         <p class="opnenew-price"><span style="margin-right:1.5rem"><%= data[i].price1%></span><span style="margin-right:0.3rem">|</span><%= data[i].price2%></p>
     </div>
@@ -124,6 +125,23 @@
                 location.href=`/index/${this.id}`
             }
         }
+
+        // 倒计时        ????????????????????????????????????????
+        // var timer = setInterval(function(){
+		//   if (sys_second > 0) {
+		// 	sys_second -= 1;
+		// 	var day = Math.floor((sys_second / 3600) / 24);
+		// 	var hour = Math.floor((sys_second / 3600) % 24);
+		// 	var minute = Math.floor((sys_second / 60) % 60);
+		// 	var second = Math.floor(sys_second % 60);
+		// 	day_elem && $(day_elem).text(day<10?"0"+day:day);//计算天
+		// 	$(hour_elem).text(hour<10?"0"+hour:hour);//计算小时
+		// 	$(minute_elem).text(minute<10?"0"+minute:minute);//计算分
+		// 	$(second_elem).text(second<10?"0"+second:second);// 计算秒
+		//   } else { 
+		// 	clearInterval(timer);
+		//   }
+		// }, 1000);
     </script> 
 
     <% include base/bottom.ejs%>
