修改空购物车界面

--- a/third-stage/views/shoppingnullcar.ejs
+++ b/third-stage/views/shoppingnullcar.ejs
@@ -2,7 +2,7 @@
 <% include base/head.ejs %>
 <link rel="stylesheet" href="/stylesheets/car/nullcar.css">
 <div class="top">
-    <a class="fa fa-angle-left fa-2x backindex"></a>
+    <a class="fa fa-angle-left fa-2x backindex" href="/shop/index"></a>
     <div class="top-content">购物车</div>
 </div>
 <div class="contentbox">
