修改跳转界面

--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -335,6 +335,10 @@ a{
             window.scrollTo(0,0)
         }
 
+        // 购物车
+        shopcar.onclick=function(){
+            location.href='/shopping/nullcar'
+        }
        
 
 </script>
