修改生活界面

--- a/third-stage/views/life.ejs
+++ b/third-stage/views/life.ejs
@@ -27,19 +27,7 @@
 
     <div data-countdown="true" class="timediv">
         <div class="time">
-            <span  id="showInterval"></span>
-            <!-- <span id="showInterval"></span>
-          
-            <span id="showInterval"></span>
-            <span id="showInterval"></span>
-        
-            <span id="showInterval"></span>
-            <span id="showInterval"></span>
-           
-            <span id="showInterval"></span>
-            <span id="showInterval"></span>
-           
-            <span id="showInterval"></span> -->
+            <span  id="showInterval" style="width:100%;text-align:center"></span>
         </div>
     </div>
      <div class="frist img ">
