--- a/third-stage/views/login.ejs
+++ b/third-stage/views/login.ejs
@@ -24,7 +24,7 @@
         <div id="bottom">
             <p id="p2">密码</p><input id="input2" type="text" name="password" placeholder="请输入密码" aria-describedby="sizing-addon1" class="form-control">
         </div>
-        <button id="button" type="submit" class="btn btn-primary btn-lg">登录</button>
+        <button id="button" type="submit" class="btn btn-primary btn-lg" style="border:none;outline:0">登录</button>
     </form>
 </div>
 <div class="password">
@@ -36,5 +36,5 @@
     <div class="hr2"></div>
 </div>
 <div class="zhuce"><a href="/shop/login_user">手机注册登录</a></div>
-<!-- <script src="/javascripts/ajax/login.js"></script> -->
+<script src="/javascripts/ajax/login.js"></script>
 <% include base/foot.ejs %>
