--- a/third-stage/views/login_user.ejs
+++ b/third-stage/views/login_user.ejs
@@ -8,44 +8,62 @@
     margin: 0 auto;
 }
 </style>
-<div class="x">
-    <span>X</span>
-</div>
-<div class="background">
-    <div class="vip">
-        <img src="../images/login/logo.ac5608f4.png">
+    <div class="x">
+        <span>X</span>
     </div>
-</div>
-<div  id="div" class="container">
-    <form>
+    <div class="background">
+        <div class="vip">
+            <img src="../images/login/logo.ac5608f4.png">
+        </div>
+    </div>
+    <div  id="div" class="container">
         <div id="bottom">
             <p id="p1">手机号</p><input id="input1" type="text" name="username" placeholder="请输入手机号" aria-describedby="sizing-addon1" class="form-control">
         </div>
         <div id="bottom">
             <p id="p2">密码</p><input id="input2" type="text" name="password" placeholder="请输入验证码" aria-describedby="sizing-addon1" class="form-control">
         </div>
-        <!-- <div id="bottom2">
-            <button id="p3">获取验证码</button>
-        </div> -->
-        <button id="button" type="submit" class="btn btn-primary btn-lg">手机号注册登录</button>
-    </form>
-</div>
-<div class="password">
-    <div class="password1">
-        <input type="checkbox" name="check">
+        <button id="button" type="submit" class="btn btn-primary btn-lg" onclick="submit()" style="border:none;outline:0">手机号注册登录</button>
     </div>
-    <div class="password2">
-        <span class="password-span">同意</span><a href="">《唯品会服务条款》</a>，<a href="">《隐私条款》</a>，<a href="">《唯品支付用户
-            <br>
-            服务协议》</a>
+    <div class="password">
+        <div class="password1">
+            <input type="checkbox" name="check">
+        </div>
+        <div class="password2">
+            <span class="password-span">同意</span><a href="">《唯品会服务条款》</a>，<a href="">《隐私条款》</a>，<a href="">《唯品支付用户
+                <br>
+                服务协议》</a>
+        </div>
+        
     </div>
-    
-</div>
-<div class="h">
-    <div class="hr1"></div>
-    <div class="huo">或</div>
-    <div class="hr2"></div>
-</div>
-<div class="zhuce"><a href="/shop/login">密码登录</button></a>
+    <div class="h">
+        <div class="hr1"></div>
+        <div class="huo">或</div>
+        <div class="hr2"></div>
+    </div>
+    <div class="zhuce"><a href="/shop/login">密码登录</button></a>
+
+    <script>
+        function submit(){
+            var xhr = new XMLHttpRequest()
+            xhr.open('post','/submit',true)
+            xhr.send(`{
+                "username": "${input1.value}",
+                "password": "${input2.value}"
+            }`)
+            xhr.onreadystatechange = function(){
+                if (xhr.readyState == 4 && xhr.status ==200) {
+                    var data = JSON.parse(xhr.responseText)
+                    if (data.code) {
+                        alert('注册成功')
+                        location.href = "http://localhost:3000/shop/login";
+                    }else{
+                        alert('用户名已存在！')
+                        
+                    }
+                }
+            }
+        }
+    </script>
 <!-- <script src="/javascripts/ajax/login.js"></script> -->
 <% include base/foot.ejs %>
