--- a/third-stage/views/login.ejs
+++ b/third-stage/views/login.ejs
@@ -37,4 +37,11 @@
 </div>
 <div class="zhuce"><a href="/shop/login_user">手机注册登录</a></div>
 <script src="/javascripts/ajax/login.js"></script>
+
+<script>
+ var x=document.querySelector('.x')
+ x.onclick=function(){
+     location.href='/shop/index'
+ }
+</script>
 <% include base/foot.ejs %>
