--- a/third-stage/public/stylesheets/lastcrazy/classify.css
+++ b/third-stage/public/stylesheets/lastcrazy/classify.css
@@ -88,7 +88,7 @@ body{
  /* content内容部分 */
 .content{
     width: 100%;
-    height: 57rem;
+    height: 67rem;
     box-sizing: border-box;
     overflow: hidden;
     position: relative;
@@ -96,7 +96,7 @@ body{
 
 /* 分类左边 */
 .contentl{
-    height: 57rem;
+    height:67rem;
     width: 25%;
     float: left;
     box-sizing: border-box;
@@ -138,7 +138,7 @@ body{
 
 /* 分类右边 */
 .contentr{
-    height: 57rem;
+    height:67rem;
     width: 75%;
     background: white;
     overflow: hidden;
@@ -201,9 +201,9 @@ body{
 
 
 /* 品牌界面 */
-/* .pinpai{
+.pinpai{
     display: none;
-} */
+}
 .scrollBar{
     width:100%;
     overflow: hidden;
