--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -173,16 +173,13 @@ a{
 .clear p{
     margin:0
 }
-#login{
-    position:relative
-}
 #admin{
     display:none
 }
 </style>
 <div class="nav">
     <div id="login">
-        <a href="/login"><span class="login">登录</span><span style="position:absolute;left:1.5rem;top:1rem;font-size:22px" id="admin"><i class="fa fa-user-o"></i></span></a>
+        <a href="/login"><span class="login">登录</span><span style="font-size:22px" id="admin" class="login"><i class="fa fa-user-o"></i></span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
     </div>
@@ -301,6 +298,7 @@ a{
     <!-- <div><i class="fa fa-long-arrow-up"></i></div> -->
 </div>
 
+<script src="/javascripts/ajax/shoppingcar.js"></script>
 <script>
      var myScroll1 = new IScroll('.scrollBar',{
             scrollX: true
@@ -340,19 +338,15 @@ a{
         back.onclick=function(e){
             window.scrollTo(0,0)
         }
-
-        // 购物车
-        shopcar.onclick=function(){
-            location.href='/shopping/nullcar'
+       var login=document.querySelector('.login')
+        if(document.cookie!=''){
+            admin.style.display='block',
+            login.style.display='none'
         }
-       
 
-        // 点击登录变成头像
-        var login=document.querySelector('.login')
-        var admin=document.querySelector('#admin')
-        login.onclick=function(){
-            login.style.display='none',
-            admin.style.display='block'
-        }
+        // var a = document.cookie
+        // console.log(a)
+        // var arr = a.split('=')
+        // console.log(arr)
 
 </script>
