--- a/third-stage/views/checkout.ejs
+++ b/third-stage/views/checkout.ejs
@@ -92,7 +92,7 @@ for(var i=0;i<jiner.length;i++){
 let paybtn=document.getElementsByClassName('paybtn')[0]
 
 paybtn.onclick=function(){
-    alert("123")
+    // alert("123")
     location.href='/finish'
 }
 </script>
