--- a/third-stage/views/search.ejs
+++ b/third-stage/views/search.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/stylesheets/lastcrazy/search.css">
 
     <div id="login">
-        <a href="/login"><span class="fa fa-angle-left"></span></a>
+        <a href="/index"><span class="fa fa-angle-left"></span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list">搜索</span>
     </div>
