--- a/third-stage/views/login_user.ejs
+++ b/third-stage/views/login_user.ejs
@@ -43,6 +43,7 @@
     </div>
     <div class="zhuce"><a href="/shop/login">密码登录</button></a>
 
+    <script src="/javascripts/quadro/layer.js"></script>
     <script>
         function submit(){
             var xhr = new XMLHttpRequest()
@@ -56,7 +57,7 @@
                     var data = JSON.parse(xhr.responseText)
                     if (data.code) {
                         alert('注册成功')
-                        location.href = "http://localhost:3000/shop/login";
+                        location.href = "/shop/login";
                     }else{
                         alert('用户名已存在！')
                         
