--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -179,7 +179,7 @@ a{
 </style>
 <div class="nav">
     <div id="login">
-        <a href="/login"><span class="login">登录</span><span style="font-size:22px" id="admin" class="login"><i class="fa fa-user-o"></i></span></a>
+        <span class="login">登录</span><span style="font-size:22px" id="admin" class="login"><i class="fa fa-user-o"></i></span>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
     </div>
@@ -341,9 +341,12 @@ a{
        var login=document.querySelector('.login')
         if(document.cookie!=''){
             admin.style.display='block',
-            login.style.display='none'
+            login.style.display='none',
+            location.href='/user'
         }
-
+        login.onclick=function(){
+            location.href='/login'
+        }
         // var a = document.cookie
         // console.log(a)
         // var arr = a.split('=')
